Changed interface for updating payment amounts, version 0.9.0